# gitlab-safe-push

./: .gitignore  Cargo.toml  LICENSE  README.md  example-config.json.dist
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: main.rs
