[package]
name = "gitlab-safe-push"
version = "0.2.0"
edition = "2021"
description = "Check GitLab pipelines before pushing to prevent breaking CI/CD"
license = "MIT"
repository = "https://github.com/bourbask/gitlab-safe-push"

[[bin]]
name = "gitlab-safe-push"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
dirs = "5.0"
url = "2.4"
regex = "1.7"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }